fixed modal dialog issues on Safari

--- a/src/comp/DlgModal.css
+++ b/src/comp/DlgModal.css
@@ -12,8 +12,26 @@
 }
 
 .mdlg-header {
+  padding:0.5rem;
+  padding-top:0;
+  display:flex;
+  align-items:flex-start;
   background-color: #ddd;
+  justify-content:space-between;
+  border-bottom: 1px solid #dee2e6;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
+
+.mdlg-header .close {
+  background-color: #ddd !important;
+  border:none !important;
+  outline: none !important;
+  box-shadow: none !important;
+  margin-top:-1px !important;
+  cursor: pointer;
+}
+
 .mdlg-title {
   font-size:18px;
   line-height:140%;
